tests/qd/compile_errors/imported_fallible_missing_if.qd
use io

fn main( -- ) {
	"/tmp/test.txt" "w" io::open
	// Missing 'if' here - should fail
	drop drop
}
